add Hero adaptive

--- a/sass/components/_button-social.scss
+++ b/sass/components/_button-social.scss
@@ -1,3 +1,11 @@
+.social-links {
+    display: flex;
+    color: var(--color-icon-grey);
+}
+
+.social-links>li:not(:last-child) {
+    margin-right: 10px;
+}
 .button-social {
     display: flex;
     justify-content: center;
