--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,6 +1,14 @@
 .container {
-    width: 1200px;
     padding: 0 15px;
     margin: 0 auto;
     align-items: center;
+@media screen and (min-width:1200px) {
+        width: 1200px;
+    }
+@media screen and (max-width:1199px) {
+        width: 768px;
+    }    
+@media screen and (max-width:480px){
+        width: 480px;
+    }
 }
