--- a/sass/main.css
+++ b/sass/main.css
@@ -32,7 +32,8 @@
   border: 0;
   padding: 0;
   white-space: nowrap;
-  clip-path: inset(100%);
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
@@ -93,6 +94,7 @@ button {
 }
 
 .body {
+  min-width: 1200px;
   font-family: var(--primary-font-family);
   color: var(--main-header-color);
   background-color: var(--bg-head-color);
@@ -100,24 +102,10 @@ button {
 }
 
 .container {
+  width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
   align-items: center;
-}
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
-}
-@media screen and (max-width: 1199px) {
-  .container {
-    width: 768px;
-  }
-}
-@media screen and (max-width: 480px) {
-  .container {
-    width: 480px;
-  }
 }
 
 .section {
@@ -137,6 +125,15 @@ button {
   letter-spacing: 0.03em;
   color: var(--header-dark-color);
   margin-bottom: 50px;
+}
+
+.social-links {
+  display: flex;
+  color: var(--color-icon-grey);
+}
+
+.social-links > li:not(:last-child) {
+  margin-right: 10px;
 }
 
 .logo {
@@ -168,15 +165,6 @@ li > .accent__button {
   border: 2px solid var(--btn-bg-accent-color);
   transform: translateY(29px);
   border-radius: 2px;
-}
-
-.social-links {
-  display: flex;
-  color: var(--color-icon-grey);
-}
-
-.social-links > li:not(:last-child) {
-  margin-right: 10px;
 }
 
 .button-social {
@@ -337,6 +325,15 @@ li > .accent__button {
   background-size: cover;
   background-position: center;
 }
+@media screen and (max-width: 480px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-hero-sm.jpg);
+    max-width: 480px;
+    min-height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/BG-btn-block.jpg);
@@ -346,49 +343,19 @@ li > .accent__button {
     padding-bottom: 200px;
   }
 }
-@media screen and (max-width: 1199px) {
-  .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-hero-md.jpg);
-    width: 768px;
-    min-height: 400px;
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
-}
-@media screen and (max-width: 480px) {
-  .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-hero-sm.jpg);
-    width: 480px;
-    min-height: 400px;
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
-}
 
 .hero__title {
+  width: 600px;
   margin-top: 0;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
+  font-size: 26px;
+  font-weight: 900;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--btn-text-accent-color);
-}
-@media screen and (max-width: 1199px) {
-  .hero__title {
-    width: 360px;
-    font-size: 26px;
-    font-weight: 900;
-    line-height: 1.62;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .hero__title {
-    width: 600px;
-    font-size: 44px;
-    font-weight: 900;
-    line-height: 1.36;
-  }
 }
 
 .button-order {
@@ -877,6 +844,20 @@ li > .accent__button {
   height: 120px;
   resize: none;
 }
+.comment::-moz-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.comment:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
 .comment::placeholder {
   font-weight: 400;
   font-size: 12px;
@@ -899,7 +880,8 @@ li > .accent__button {
   font-size: 14px;
   line-height: 1.71px;
   letter-spacing: 0.03em;
-  text-decoration-line: underline;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
   color: #2196f3;
 }
 
@@ -970,6 +952,24 @@ li > .accent__button {
 .subscribe__input:hover {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   cursor: pointer;
+}
+.subscribe__input::-moz-placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.subscribe__input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 .subscribe__input::placeholder {
   font-weight: 400;
