--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,11 +9,17 @@
     @media screen and (min-width: 1200px) {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
-                url(../images/bg-hero.jpg);
+                url(../images/bg-hero-lg.jpg);
         max-width: 1600px;
         min-height: 600px;
         padding-top: 200px;
         padding-bottom: 200px;
+        @media (min-device-pixel-ratio: 2),
+            (-webkit-min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: url(../images/bg-hero-lg@2x.jpg);
+            }
     }
     @media screen and (max-width: 1199px)  {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),
@@ -24,6 +30,12 @@
         min-height: 400px;
         padding-top: 118px;
         padding-bottom: 118px;
+        @media (min-device-pixel-ratio: 2),
+            (-webkit-min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: url(../images/bg-hero-md@2x.jpg);
+            }
     }
     @media screen and (max-width: 480px) {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),
@@ -33,8 +45,14 @@
             min-height: 400px;
             padding-top: 118px;
             padding-bottom: 118px;
+    
+        @media (min-device-pixel-ratio: 2),
+        (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: url(../images/bg-hero-sm@2x.jpg);
+        }
     }
-
     
 }
 
