--- a/sass/portfolio-page/_pojects-gallery.scss
+++ b/sass/portfolio-page/_pojects-gallery.scss
@@ -34,9 +34,9 @@
             flex-wrap: wrap;
         }
     
-        @media screen and (max-width: 480px) {
+        @media screen and (max-width: 768px) {
             flex-basis: calc(100%);
-            min-width: 450px;
+            max-width: 450px;
             flex-direction: column;
         }
 }
@@ -45,16 +45,16 @@
 .projects__img {
     position: relative;
     overflow: hidden;
-    @media screen and (min-width: 1200px) {
-            width: 370px;
+    @media screen and (max-width: 768px) {
+            width: 450px;
         }
     
-        @media screen and (min-width: 480px) and (max-width: 1199px) {
+        @media screen and (min-width: 768px) and (max-width: 1199px) {
             width: 354px;
         }
     
-        @media screen and (max-width: 480px) {
-            width: 450px;
+        @media screen and (min-width: 1200px) {
+            width: 370px;
         }
 }
 
@@ -93,5 +93,4 @@
     @include font(16px,400, 30px);
     letter-spacing: 0.03em;
     color: var(--text-description-color);
-    padding-bottom: auto;
 }
