--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "./components/header-accent-button";
 @import "./components/button-social";
 @import "./components/button-submit";
+@import "./components/mobile-menu";
 
 @import "./layout/header";
 
