--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,114 @@ li > .accent__button {
   fill: currentColor;
 }
 
+@media screen and (max-width: 480px) {
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    overflow: auto;
+    z-index: 100;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity var(--transition-dur-and-func), visibility var(--transition-dur-and-func);
+  }
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
+  }
+}
+@media screen and (min-width: 480px) {
+  .open-mobile-menu-btn,
+.mobile-menu {
+    display: none;
+  }
+}
+.accent-item {
+  color: var(--btn-bg-accent-color);
+}
+
+.mobile-menu__container {
+  position: relative;
+  padding-left: 40px;
+}
+
+.mobile-menu__close-btn {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+.mobile-menu__close-btn:hover, .mobile-menu__close-btn:focus {
+  color: var(--btn-bg-accent-color);
+}
+
+.mobile-menu__close-icon {
+  display: block;
+}
+
+.mobile-menu__links {
+  padding-top: 48px;
+  margin-bottom: 302px;
+}
+
+.pages-links {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 1.18;
+}
+.pages-links:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__contacts {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 64px;
+}
+
+.mobile-menu__contacts--phone {
+  display: inline-block;
+  font-size: 34px;
+  font-weight: 500;
+  line-height: 1.18;
+  margin-bottom: 32px;
+}
+
+.mobile-menu__contacts--mail {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.17;
+  color: var(--text-description-color);
+}
+
+.mobile-menu__social {
+  display: flex;
+}
+
+.mobile-social__link {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.22;
+}
+.mobile-social__link:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 10px;
+  margin-right: 10px;
+}
+
+@media screen and (max-width: 480px) {
+  .open-mobile-menu-btn__icon {
+    display: block;
+  }
+}
+
 .page-header {
   padding: 0;
   margin: 0 auto;
@@ -302,7 +410,7 @@ li > .accent__button {
 }
 @media screen and (max-width: 480px) {
   .page-header__container {
-    flex-direction: column;
+    flex-direction: row;
   }
 }
 
@@ -324,7 +432,7 @@ li > .accent__button {
 }
 @media screen and (max-width: 480px) {
   .navigation__menu {
-    margin-left: 40px;
+    display: none;
   }
 }
 
@@ -362,6 +470,11 @@ li > .accent__button {
   .contacts {
     flex-direction: column;
     gap: 10px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contacts {
+    display: none;
   }
 }
 
@@ -419,6 +532,22 @@ li > .accent__button {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .menu {
+    display: none;
+  }
+  .page-header__modal-btn {
+    display: none;
+  }
+  .open-mobile-menu-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+  }
+  .open-mobile-menu-btn__icon {
+    display: block;
+  }
+}
 .hero {
   position: relative;
   margin: 0 auto;
