--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -28,6 +28,7 @@
                 }
         @media screen and (max-width: 480px) {
             flex-direction: row;
+            justify-content: space-between;
         }
 }
 .navigation {
