--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,7 +2,7 @@
     padding: 60px 0;
     background-color: var(--bg-footer-color);
     @media screen and (max-width: 1199px){
-        min-width: 768;
+        width: 100%;
     }
     @media screen and (max-width: 480px){
         min-width: 480px;
