--- a/css/main.css
+++ b/css/main.css
@@ -1286,6 +1286,7 @@ li > .accent__button {
   visibility: visible;
   top: 0;
   left: 0;
+  overflow: hidden;
   z-index: 150;
   width: 100%;
   height: 100%;
@@ -1297,6 +1298,7 @@ li > .accent__button {
   position: absolute;
   top: 50%;
   left: 50%;
+  overflow-x: scroll;
   transform: translate(-50%, -50%);
   visibility: visible;
   border-radius: 4px;
