--- a/sass/forms/_modal-hero.scss
+++ b/sass/forms/_modal-hero.scss
@@ -9,6 +9,7 @@
     visibility: visible;
     top: 0;
     left: 0;
+    overflow: hidden;
     z-index: 150;
     width: 100%;
     height: 100%;
@@ -21,6 +22,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    overflow-x: scroll;
     transform: translate(-50%, -50%);
     visibility: visible;
     border-radius: 4px;
