--- a/css/main.css
+++ b/css/main.css
@@ -109,14 +109,14 @@ button {
     max-width: 1200px;
   }
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .container {
-    max-width: 480px;
+    min-width: 480px;
   }
 }
 
@@ -272,40 +272,40 @@ li > .accent__button {
   fill: currentColor;
 }
 
-@media screen and (max-width: 480px) {
-  .mobile-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #ffffff;
-    overflow: auto;
-    z-index: 100;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    transition: opacity var(--transition-time-and-func), visibility var(--transition-time-and-func);
-  }
-  .mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: all;
-  }
-}
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .open-mobile-menu-btn,
 .mobile-menu {
     display: none;
   }
 }
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  overflow: auto;
+  z-index: 100;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity var(--transition-time-and-func), visibility var(--transition-time-and-func);
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+
 .accent-item {
   color: var(--btn-bg-accent-color);
 }
 
 .mobile-menu__container {
   position: relative;
-  padding-left: 40px;
+  padding: 40px 48px;
 }
 
 .mobile-menu__close-btn {
@@ -407,8 +407,8 @@ li > .accent__button {
 
 .page-header__container {
   display: flex;
-  padding: 0 15px;
   margin: 0 auto;
+  min-width: 480px;
   align-items: center;
 }
 @media screen and (min-width: 1200px) {
@@ -416,21 +416,16 @@ li > .accent__button {
     max-width: 1200px;
   }
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 767px) {
   .page-header__container {
-    flex-wrap: wrap;
-    gap: 30px;
+    padding: 15px;
   }
 }
-@media screen and (min-width: 480px) and (max-width: 728px) {
-  .page-header__container {
-    flex-direction: column;
-  }
-}
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .page-header__container {
     flex-direction: row;
     justify-content: space-between;
+    padding: 15px;
   }
 }
 
@@ -450,7 +445,7 @@ li > .accent__button {
     margin-left: 88px;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .navigation__menu {
     display: none;
   }
@@ -492,7 +487,7 @@ li > .accent__button {
     gap: 10px;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 767px) {
   .contacts {
     display: none;
   }
@@ -543,7 +538,7 @@ li > .accent__button {
   align-items: center;
   transition: color var(--transition-time-and-func);
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1199px) {
   .contacts__phone {
     padding-top: 0px;
     padding-right: 0;
@@ -552,7 +547,7 @@ li > .accent__button {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 767px) {
   .menu {
     display: none;
   }
@@ -1298,7 +1293,8 @@ li > .accent__button {
   position: absolute;
   top: 50%;
   left: 50%;
-  overflow-x: scroll;
+  max-height: 98%;
+  overflow-x: hidden;
   transform: translate(-50%, -50%);
   visibility: visible;
   border-radius: 4px;
