--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,10 +5,10 @@
 @media screen and (min-width:1200px) {
         max-width: 1200px;
     }
-@media screen and (max-width:1199px) {
+@media screen and (min-width:768px) {
         max-width: 768px;
     }    
-@media screen and (max-width:480px){
-        max-width: 480px;
+@media screen and (min-width:480px){
+        min-width: 480px;
     }
 }
