--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,38 +1,36 @@
-@media screen and (max-width: 480px) {
-    .mobile-menu {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #ffffff;
-        overflow: auto;
-        z-index: 100;
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none;
-        transition: opacity var(--transition-time-and-func), visibility var(--transition-time-and-func);
-    }
 
-    .mobile-menu.is-open {
-        opacity: 1;
-        visibility: visible;
-        pointer-events: all;
-    }
-
-}
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
     .open-mobile-menu-btn,
     .mobile-menu {
         display: none;
     }
+}
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    overflow: auto;
+    z-index: 100;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity var(--transition-time-and-func), visibility var(--transition-time-and-func);
+}
+
+.mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
 }
 .accent-item{
     color: var(--btn-bg-accent-color);
 }
 .mobile-menu__container {
     position: relative;
-    padding-left: 40px;
+    padding: 40px 48px;
 }
 
 .mobile-menu__close-btn {
