--- a/sass/forms/_subscribe-form.scss
+++ b/sass/forms/_subscribe-form.scss
@@ -23,15 +23,20 @@
     background-color: var(--bg-footer-color);
     color: rgba(255, 255, 255, 0.6);
     transition: filter var(--transition-time-and-func);
-
-    @media screen and (max-width: 480px) {
-            margin-bottom: 20px;
-        }
-    @media screen and (max-width: 1199px) {
+@media screen and (max-width: 480px) {
         margin-bottom: 20px;
-        margin-right: 0;
-        width: 450px;
     }
+    @media screen and (min-width: 480px) {
+        margin-bottom: 20px;
+    }
+@media screen and (min-width: 768px) {
+    width: 450px;
+    margin-bottom: 20px;
+        margin-right: 0;
+}
+  @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+  }
 
     &:hover {
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
