--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -12,31 +12,34 @@
     display:flex;
     padding: 0 15px;
     margin: 0 auto;
-    align-items: center;  
+    align-items: center; 
+    @media screen and (max-width: 479px) {
+         flex-direction: column;
+    }
+     @media screen and (min-width: 768px) {
+        flex-wrap: wrap;
+        }
     @media screen and (min-width: 1200px) {
+            flex-direction: row;
             padding-bottom: 47px;
             max-width: 1200px;
         }
-    
-        @media screen and (max-width: 1199px) {
-            flex-wrap: wrap;
-        }
-    @media screen and (max-width: 480px) {
-         flex-direction: column;
-    }
 }
 .page-footer__box {
     margin-right: 70px;
-    @media screen and (max-width: 1199px) {
-            margin-left: 61px;
-            margin-right: 165px;
+        @media screen and (min-width: 480px) {
+        margin: 0 auto;
         }
-                @media screen and (min-width: 481px) and (max-width: 763px) {
-                    margin: 0 auto;
-                }
-@media screen and (max-width: 480px) {
-    margin: 0 auto;
-}
+        @media screen and (min-width: 768px) {
+        margin: 0 auto;
+        }
+        @media screen and (min-width: 1200px) {
+            display: block;
+        margin-left: 61px;
+        margin-right: 165px;
+        }
+                
+
 }
 
 .page-footer__logo-wrapper {
@@ -90,32 +93,43 @@
 }
 
 .page-footer__join-social{
-    margin-top: 8px;
-    margin-right: 70px;
-    align-self: flex-start;
-    @media screen and (max-width: 480px) {
+    
+    @media screen and (max-width: 479px) {
         padding: 60px 0;
             margin: 0 auto;
         }
-        @media screen and (min-width: 481px) and (max-width: 763px) {
+        @media screen and (min-width: 480px){
             padding: 60px 0;
             margin: 0 auto;
         }
+                @media screen and (min-width: 768px){
+                margin: 0 auto;
+                }
+                                @media screen and (min-width: 1200px) {
+                                    display: block;
+                                    padding: 0;
+                                    margin-top: 8px;
+                                    // margin-right: 70px;
+                                    align-self: flex-start;
+                                }
 }
 .subscribe {
     margin-top: 8px;
     align-self: flex-start;
-    @media screen and (max-width: 1199px) {
+    @media screen and (min-width: 480px) {
+            padding: 0;
+            margin: 0 auto;
+        }
+    @media screen and (min-width: 1200px) {
         display: block;
         width: 100%;
         padding: 60px 0;
         }
-        @media screen and (max-width: 480px) {
-            padding: 0;
-        }
+        
 
 }
 .page-footer__title {
+    display: inline-block;
     margin-bottom: 20px;
     @include font(14px, 700, 16px);
     letter-spacing: 0.03em;
